# finapp-backend

./: .env.example  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/presets/: .registry
.specify/workflows/: workflow-registry.json
app/: main.py
app/api/routes/v1/: health.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/modules/auth_household/: __init__.py
app/modules/auth_household/models/: __init__.py  authorization_code.py  household.py  outbox_event.py  refresh_token.py  user.py
app/modules/auth_household/repositories/: __init__.py  authorization_code_repository.py  household_member_repository.py  household_repository.py  refresh_token_repository.py  user_repository.py
app/modules/auth_household/schemas/: auth.py
app/modules/auth_household/services/: auth_command_service.py  auth_query_service.py
app/modules/auth_household/utils/: encryption.py  oidc_clients.py  oidc_provider.py  rate_limiter.py  token.py
app/modules/categorisation/: __init__.py
app/shared/: exceptions.py  schemas.py
app/shared/events/: __init__.py
docs/: codebase-research.md
specs/001-codebase-research/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-codebase-research/checklists/: requirements.md
tests/: conftest.py
tests/auth_household/: test_auth_routes.py
tests/integration/: test_health.py
tests/integration/auth_household/: test_discovery.py  test_jwks.py  test_logout.py  test_pkce_flow.py  test_refresh.py  test_register.py  test_require_role.py  test_userinfo.py
tests/unit/: test_imports.py
tests/unit/auth_household/: test_auth_command_service.py  test_local_credential_provider.py  test_rate_limiter.py  test_token_service.py
(+3 files in other folders)
