[project]
name = "finapp-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "httpx>=0.27",
  "python-json-logger>=2.0",
  "redis>=5.0",
  "aio-pika>=9.4",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "black>=24.0",
  "detect-secrets>=1.5",
  "pre-commit>=3.7",
]

[tool.uv]
# uv.lock is always committed. CI runs `uv sync --frozen` to reproduce
# the exact locked environment — no network calls for already-locked deps.
managed = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

# Enforce layer import rules:
# routes/ must not import from repositories/ or models/
# services/ must not import from db/
# repositories/ must not import from services/
[tool.ruff.lint.per-file-ignores]
"app/modules/*/api/**" = []
"app/modules/*/repositories/**" = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
